# fulfillment-service

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  Containerfile  MULTI_TENANCY_TEST_PLAN.md  OWNERS  README.md  TENANCY.md  auth_readme.md  buf.gen.yaml  buf.yaml  dev.py  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: check-pull-request.yaml  publish-artifacts.yaml  (+6 more)
chart/: Chart.yaml  README.md  values.yaml
charts/: README.md
dev/: README.md  __init__.py  buf.py  build.py  clean.py  command.py  commands.py  defaults.py  deploy.py  dirs.py  format.py  formatter.py  generate.py  kustomize.py  lint.py  push.py  setup.py  test.py  tools.py  undeploy.py  update.py
docs/: API.md  AUTH.md  CATALOG_ITEMS.md  INSTALL.md
internal/: context.go  context_test.go  tool.go
it/: Containerfile  it_access_test.go  it_ansible_role_test.go  it_baremetal_instance_lifecycle_test.go  it_cli_auth_test.go  it_cli_errors_test.go  it_cluster_reconciler_test.go  it_compute_subnet_test.go  it_emergency_access_test.go  it_metrics_test.go  it_multitenancy_test.go  it_nodeset_removal_test.go  it_organization_lifecycle_test.go  it_private_cluster_templates_test.go  it_private_host_classes_test.go  it_public_cluster_templates_test.go  it_public_clusters_test.go  it_rest_gateway_test.go  it_role_binding_reconciler_test.go  it_suite_test.go  it_tenant_lifecycle_test.go  it_tool.go
manifests/: README.md  database.yaml  kustomization.yaml  namespace.yaml  publisher.yaml  service.yaml
scripts/: setup-e2e-tools.sh
(+1031 files in other folders)
