[project]
name = "fulfillment-service-dev"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "requests>=2.34.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
